--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,10 @@
-pipeline{
+pipeline {
   agent any
-  stages{
-    stage('Bomanai'){
-      steps{
-         sh 'pip install --no-cache-dir --upgrade boman-cli'
-         sh '~/.local/bin/boman-cli -a run -cicd jenkins'
+  stages {
+    stage('Bomanai') {
+      steps {
+        sh 'pip install --no-cache-dir --upgrade boman-cli'
+        sh '~/.local/bin/boman-cli -a run -cicd jenkins --url qa.boman.ai'
       }
     }
   }
